[tool.poetry]
name = "asyncapi"
version = "0.1.0"
description = ""
authors = ["AleksandraV <am.amsti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
aioredis = "^2.0.1"
hiredis = "^2.0.0"
asyncpg = "^0.25.0"
aiopg = "^1.3.3"
redis = "^4.2.2"
databases = {git = "https://github.com/encode/databases.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
